Fix spacing in hero section homepage

--- a/src/styles/layouts/_hero-home.scss
+++ b/src/styles/layouts/_hero-home.scss
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column-reverse;
     justify-content: space-between;
-    align-items: center;
+    align-items: left;
     gap: 36px;
     background: linear-gradient(
       90deg,
@@ -17,11 +17,17 @@
     );
 
     @include tablet {
-      padding-block: 47px;
+      padding-block: 120px;
       margin-block: 0 120px;
       flex-direction: row;
-      flex: 1 1;
+      align-items: center;
     }
+
+    @include desktop {
+      padding-block: 47px;
+    }
+
+  
   }
 
   &__wrapper {
@@ -32,17 +38,19 @@
     width: 100%;
 
     @include tablet {
-      min-width: 320px;
+      width: 69%;
       max-width: 520px;
     }
   }
 
   &__banner {
+    height: 276px;
     width: 100%;
-    height: auto;
 
     @include tablet {
       height: 386px;
+      width: 443px;
+      flex: 1;
     }
 
     @include desktop {
